src/test/ui/generic-associated-types/parse/trait-path-expected-token.stderr
error: expected one of `!`, `(`, `+`, `,`, `::`, `<`, or `>`, found `=`
  --> $DIR/trait-path-expected-token.rs:5:33
   |
LL | fn f1<'a>(arg : Box<dyn X<Y = B = &'a ()>>) {}
   |                               - ^ expected one of 7 possible tokens
   |                               |
   |                               maybe try to close unmatched angle bracket

error: aborting due to previous error

